Fix margin issue in forked repositories
Part of story #10409: have a burning parrot git repository view

Go to a forked repository. The link "Forked from" should not have too much
whitespace with the repository name.

--- a/plugins/git/www/themes/BurningParrot/css/repository/_repository.scss
+++ b/plugins/git/www/themes/BurningParrot/css/repository/_repository.scss
@@ -20,13 +20,17 @@
 @import '../gitphp';
 
 .git-repository-path {
-    display: block;
     color: $tlp-ui-dimmed;
     font-size: 16px;
 }
 
+.git-repository-forked-name {
+    margin: 0;
+}
+
 .git-repository-parent {
-    color: $tlp-ui-dimmed;
+    display: block;
+    margin: 3px 0 30px;
     font-size: 14px;
 }
 
